starlight30/browsertrix/resources/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tls
  namespace: browsertrix
spec:
  rules:
    - host: browsertrix.app.p1kachu.net
      http:
        paths:
          - backend:
              service:
                name: browsertrix-cloud-backend
                port:
                  number: 8000
            path: /api/
            pathType: Prefix
          - backend:
              service:
                name: browsertrix-cloud-frontend
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - browsertrix.app.p1kachu.net
      secretName: wild-cert
